--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "ipykernel>=6.30.1",
     "jupyter-book>=2.0.0a0",
     "kagglehub>=0.3.13",
+    "matplotlib>=3.10.6",
     "pandas>=2.3.2",
+    "plotly>=6.3.0",
+    "scikit-learn>=1.7.1",
+    "scipy>=1.15.3",
+    "seaborn>=0.13.2",
 ]
 
 [project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
