--- a/myst.yml
+++ b/myst.yml
@@ -35,10 +35,8 @@ project:
     - title: Mathematical Foundations
       children:
         - file: book/math_foundations/introductie.md
-        - title: Les 1
-          children:
-            - file: book/math_foundations/les1/data.ipynb
-            - file: book/math_foundations/les1/patronen.ipynb
+        - file: book/math_foundations/afspraken.md
+        - file: book/math_foundations/linalg/linalg.ipynb
 site:
   options:
     favicon: img/AP_favicon.ico
