--- a/myst.yml
+++ b/myst.yml
@@ -36,7 +36,11 @@ project:
       children:
         - file: book/math_foundations/introductie.md
         - file: book/math_foundations/afspraken.md
-        - file: book/math_foundations/linalg/linalg.ipynb
+        - file: book/math_foundations/linalg/tensors.ipynb
+          children:
+            - file: book/math_foundations/linalg/why_tensors.ipynb
+            - file: book/math_foundations/linalg/basis_ops.ipynb
+            - file: book/math_foundations/linalg/dot_prod.ipynb
 site:
   options:
     favicon: img/AP_favicon.ico
