--- a/myst.yml
+++ b/myst.yml
@@ -36,8 +36,9 @@ project:
       children:
         - file: book/math_foundations/introductie.md
         - file: book/math_foundations/afspraken.md
-        - file: book/math_foundations/linalg/tensors.ipynb
+        - title: Linear Algebra
           children:
+            - file: book/math_foundations/linalg/tensors.ipynb 
             - file: book/math_foundations/linalg/why_tensors.ipynb
             - file: book/math_foundations/linalg/basis_ops.ipynb
             - file: book/math_foundations/linalg/dot_prod.ipynb
