--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
 ]
