--- a/myst.yml
+++ b/myst.yml
@@ -44,6 +44,7 @@ project:
           children:
             - file: book/ml_principles/labo/uber#1.ipynb
             - file: book/ml_principles/labo/uber#2.ipynb
+            - file: book/ml_principles/labo/airbnb.ipynb
     - title: Mathematical Foundations
       children:
         - file: book/math_foundations/introductie.md
