--- a/myst.yml
+++ b/myst.yml
@@ -62,6 +62,8 @@ project:
                 - file: book/math_foundations/linalg/lineaire_regressie/grid.ipynb
                 - file: book/math_foundations/linalg/lineaire_regressie/monte_carlo.ipynb
                 - file: book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+                - file: book/math_foundations/linalg/lineaire_regressie/closed.ipynb
+                - file: book/math_foundations/linalg/lineaire_regressie/gradient_descent.ipynb
         - title: Labo
           children:
             - file: book/math_foundations/labo/python.ipynb
