--- a/myst.yml
+++ b/myst.yml
@@ -44,6 +44,8 @@ project:
         - title: ML voor computer vision
           children:
             - file: book/ml_principles/vision/intro.ipynb
+            - file: book/ml_principles/vision/cnns.ipynb
+            - file: book/ml_principles/vision/vit.ipynb
         - title: Labo
           children:
             - file: book/ml_principles/labo/uber#1.ipynb
