--- a/myst.yml
+++ b/myst.yml
@@ -78,6 +78,7 @@ project:
             - file: book/math_foundations/labo/numpy.ipynb
             - file: book/math_foundations/labo/linalg.ipynb
             - file: book/math_foundations/labo/linreg.ipynb
+        - file: book/math_foundations/glossary.md
 site:
   options:
     favicon: img/AP_favicon.ico
