--- a/myst.yml
+++ b/myst.yml
@@ -51,6 +51,7 @@ project:
             - file: book/ml_principles/labo/uber#1.ipynb
             - file: book/ml_principles/labo/uber#2.ipynb
             - file: book/ml_principles/labo/airbnb.ipynb
+        - file: book/ml_principles/glossary.md
     - title: Mathematical Foundations
       children:
         - file: book/math_foundations/introductie.md
