--- a/myst.yml
+++ b/myst.yml
@@ -43,14 +43,15 @@ project:
           children:
             - title: Exploratory data analysis
               children:
-                - file: book/ml_principles/labs/exploratory_uber_#1.ipynb
-                - file: book/ml_principles/labs/exploratory_uber_#2.ipynb
+                - file: book/ml_principles/labs/exploratory_uber_a.ipynb
+                - file: book/ml_principles/labs/exploratory_uber_b.ipynb
             - title: ML voor gestructureerde data
               children:
                 - file: book/ml_principles/labs/structured_airbnb.ipynb
             - title: ML voor beeldherkenning
               children:
-                - file: book/ml_principles/labs/imgrec_taco_#1.ipynb
+                - file: book/ml_principles/labs/imgrec_taco_explore.ipynb
+                - file: book/ml_principles/labs/imgrec_taco_train.ipynb
         - file: book/ml_principles/glossary.md
     - title: Mathematical Foundations
       children:
