--- a/myst.yml
+++ b/myst.yml
@@ -77,6 +77,7 @@ project:
         - title: Neurale netwerken
           children:
             - file: book/math_foundations/nn/perceptron.ipynb
+            - file: book/math_foundations/nn/backprop.ipynb
         - title: Labo's
           children:
             - file: book/math_foundations/labs/python.ipynb
