--- a/myst.yml
+++ b/myst.yml
@@ -85,6 +85,7 @@ project:
             - file: book/math_foundations/labs/linalg.ipynb
             - file: book/math_foundations/labs/linreg.ipynb
             - file: book/math_foundations/labs/glm.ipynb
+            - file: book/math_foundations/labs/backprop.ipynb
         - file: book/math_foundations/glossary.md
 site:
   options:
