Add mind map image and update project structure in myst.yml
- Added a new mind map image for the math foundations section.
- Updated myst.yml to include the new mmap.md file in the project structure.

--- a/myst.yml
+++ b/myst.yml
@@ -57,6 +57,7 @@ project:
       children:
         - file: book/math_foundations/introduction.md
         - file: book/math_foundations/instructions.md
+        - file: book/math_foundations/mmap.md
         - title: Linear algebra
           children:
             - file: book/math_foundations/linalg/tensors.ipynb
