--- a/myst.yml
+++ b/myst.yml
@@ -11,7 +11,7 @@ project:
   edit_url: null
   toc:
     - file: book/overview.md
-    - title: Algemene informatie
+    - title: 🛈 Algemene informatie
       children:
       - title: Lectoren
         children:
@@ -19,7 +19,7 @@ project:
       - file: book/algemeen/preparation.ipynb
       - file: book/algemeen/hello_world.ipynb
       - file: book/algemeen/references.md
-    - title: ML Principles
+    - title: ⚡ ML Principles
       children:
         - file: book/ml_principles/introduction.md
         - file: book/ml_principles/instructions.md
@@ -39,6 +39,7 @@ project:
             - file: book/ml_principles/basics/structure.ipynb
         - file: book/ml_principles/structured/trees.ipynb
         - file: book/ml_principles/vision/imgrec.ipynb
+        - file: book/ml_principles/series/nlp.ipynb
         - title: Labo's
           children:
             - title: Exploratory data analysis
@@ -53,7 +54,7 @@ project:
                 - file: book/ml_principles/labs/imgrec_taco_explore.ipynb
                 - file: book/ml_principles/labs/imgrec_taco_train.ipynb
         - file: book/ml_principles/glossary.md
-    - title: Mathematical Foundations
+    - title: ∑ Mathematical Foundations
       children:
         - file: book/math_foundations/introduction.md
         - file: book/math_foundations/instructions.md
