--- a/myst.yml
+++ b/myst.yml
@@ -84,8 +84,7 @@ project:
         - title: Kansrekenen en Informatie theorie
           children:
             - file: book/math_foundations/prob/probability.ipynb
-            # - file: book/math_foundations/prob/information.ipynb
-            # - file: book/math_foundations/prob/bayes.ipynb
+            - file: book/math_foundations/prob/information.ipynb
         - title: Labo's
           children:
             - file: book/math_foundations/labs/python.ipynb
