Add image recognition training notebook and update project structure
- Updated `imgrec_taco_train.ipynb` with additional imports, TensorBoard logging, and validation metrics.
- Added code for reading log files and plotting training/validation losses.
- Included validation results and metrics plotting.
- Enhanced testing functionality with ground truth visualization.
- Removed unnecessary code from `nlp_nanogpt.ipynb`.
- Updated `myst.yml` to include the `nlp_nanogpt.ipynb` in the project structure.

--- a/myst.yml
+++ b/myst.yml
@@ -53,6 +53,7 @@ project:
               children:
                 - file: book/ml_principles/labs/imgrec_taco_explore.ipynb
                 - file: book/ml_principles/labs/imgrec_taco_train.ipynb
+                - file: book/ml_principles/labs/nlp_nanogpt.ipynb
         - file: book/ml_principles/glossary.md
     - title: ∑ Mathematical Foundations
       children:
