Update course materials for probability and statistics
- Revised the course schedule in the introduction.md to include additional gradient descent topics.
- Added new Jupyter notebooks for probability basics, joint probability, and probability moments, covering key concepts such as random variables, joint distributions, and statistical moments.
- Updated parameters.ipynb to include a reference to the Law of Large Numbers.
- Modified myst.yml to include the new lab notebooks in the project structure.

--- a/myst.yml
+++ b/myst.yml
@@ -94,6 +94,9 @@ project:
             - file: book/math_foundations/labs/linreg.ipynb
             - file: book/math_foundations/labs/glm.ipynb
             - file: book/math_foundations/labs/backprop.ipynb
+            - file: book/math_foundations/labs/probability-basics.ipynb
+            - file: book/math_foundations/labs/probability-joint.ipynb
+            - file: book/math_foundations/labs/probability-moments.ipynb
         - file: book/math_foundations/glossary.md
 site:
   options:
