--- a/myst.yml
+++ b/myst.yml
@@ -87,6 +87,7 @@ project:
           children:
             - file: book/math_foundations/prob/probability.ipynb
             - file: book/math_foundations/prob/information.ipynb
+            - file: book/math_foundations/prob/testing.ipynb
         - title: Labo's
           children:
             - file: book/math_foundations/labs/python.ipynb
