math foundations ready

--- a/myst.yml
+++ b/myst.yml
@@ -100,6 +100,8 @@ project:
             - file: book/math_foundations/labs/probability-basics.ipynb
             - file: book/math_foundations/labs/probability-joint.ipynb
             - file: book/math_foundations/labs/probability-moments.ipynb
+            - file: book/math_foundations/labs/probability-testing.ipynb
+            - file: book/math_foundations/labs/probability-likelihood.ipynb
         - file: book/math_foundations/glossary.md
 site:
   options:
