--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ authors = [
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "cairosvg>=2.8.2",
+    "datasets>=4.4.1",
+    "diffusers>=0.35.2",
     "dtreeviz>=2.2.2",
     "einops>=0.8.1",
     "ipykernel>=6.30.1",
