--- a/myst.yml
+++ b/myst.yml
@@ -41,6 +41,7 @@ project:
         - file: book/ml_principles/vision/imgrec.ipynb
         - file: book/ml_principles/series/nlp.ipynb
         - file: book/ml_principles/vision/imggen.ipynb
+        - file: book/ml_principles/rl/rl_principles.ipynb
         - title: Labo's
           children:
             - title: Exploratory data analysis
