--- a/myst.yml
+++ b/myst.yml
@@ -57,6 +57,9 @@ project:
                 - file: book/ml_principles/labs/imgrec_taco_train.ipynb
             - file: book/ml_principles/labs/nlp_nanogpt.ipynb
             - file: book/ml_principles/labs/imggen_butterfly.ipynb
+            - title: ML voor actiecontrole
+              children:
+                - file: book/ml_principles/labs/rl_basics.ipynb
         - file: book/ml_principles/glossary.md
     - title: ∑ Mathematical Foundations
       children:
