--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,8 +32,7 @@
                 "saoudrizwan.claude-dev",
                 "streetsidesoftware.code-spell-checker",
                 "streetsidesoftware.code-spell-checker-dutch",
-                "tamasfe.even-better-toml",
-                "visualstudioexptteam.vscodeintellicode"
+                "tamasfe.even-better-toml"
             ],
             "settings": {
                 "coverage-gutters.coverageFileNames": [
