--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "diffusers>=0.35.2",
     "dtreeviz>=2.2.2",
     "einops>=0.8.1",
+    "gymnasium>=1.2.2",
     "ipykernel>=6.30.1",
     "jupyter-book>=2.0.0a0",
     "kagglehub>=0.3.13",
@@ -24,13 +25,17 @@ dependencies = [
     "opencv-python-headless>=4.12.0.88",
     "pandas>=2.3.2",
     "plotly>=6.3.0",
+    "pygame>=2.6.1",
+    "rich>=14.2.0",
     "scikit-learn>=1.7.1",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
+    "stable-baselines3>=2.7.0",
     "statsmodels>=0.14.5",
     "timm>=1.0.20",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
+    "tqdm>=4.67.1",
     "transformers>=4.57.0",
     "xgboost-cpu>=3.0.5",
 ]
