--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "diffusers>=0.35.2",
     "dtreeviz>=2.2.2",
     "einops>=0.8.1",
-    "gymnasium>=1.2.2",
+    "gymnasium[box2d]>=1.2.2",
     "ipykernel>=6.30.1",
     "jupyter-book>=2.0.0a0",
     "kagglehub>=0.3.13",
@@ -32,6 +32,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "stable-baselines3>=2.7.0",
     "statsmodels>=0.14.5",
+    "swig>=4.4.0",
     "timm>=1.0.20",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
