--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "diffusers>=0.35.2",
     "dtreeviz>=2.2.2",
     "einops>=0.8.1",
-    "gymnasium[box2d]>=1.2.2",
+    "gymnasium>=1.2.2",
     "ipykernel>=6.30.1",
     "jupyter-book>=2.0.0a0",
     "kagglehub>=0.3.13",
