missing doom ref in myst,yml

--- a/myst.yml
+++ b/myst.yml
@@ -60,6 +60,7 @@ project:
             - title: ML voor actiecontrole
               children:
                 - file: book/ml_principles/labs/rl_basics.ipynb
+                - file: book/ml_principles/labs/rl_hugging_face_doom.ipynb
         - file: book/ml_principles/glossary.md
     - title: ∑ Mathematical Foundations
       children:
