--- a/myst.yml
+++ b/myst.yml
@@ -95,6 +95,7 @@ project:
             - file: book/math_foundations/prob/information.ipynb
             - file: book/math_foundations/prob/testing.ipynb
             - file: book/math_foundations/prob/likelihood.ipynb
+            - file: book/math_foundations/prob/bayes.ipynb
         - title: Labo's
           children:
             - file: book/math_foundations/labs/python.ipynb
