--- a/myst.yml
+++ b/myst.yml
@@ -96,6 +96,9 @@ project:
             - file: book/math_foundations/prob/testing.ipynb
             - file: book/math_foundations/prob/likelihood.ipynb
             - file: book/math_foundations/prob/bayes.ipynb
+        - title: Structurele analyse
+          children:
+            - file: book/math_foundations/struct/pca.ipynb
         - title: Labo's
           children:
             - file: book/math_foundations/labs/python.ipynb
