--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "torchvision>=0.23.0",
     "tqdm>=4.67.1",
     "transformers>=4.57.0",
+    "umap-learn>=0.5.9.post2",
     "xgboost-cpu>=3.0.5",
 ]
 
