--- a/myst.yml
+++ b/myst.yml
@@ -113,6 +113,7 @@ project:
             - file: book/math_foundations/labs/probability-moments.ipynb
             - file: book/math_foundations/labs/probability-testing.ipynb
             - file: book/math_foundations/labs/probability-likelihood.ipynb
+            - file: book/math_foundations/labs/probability-bayes.ipynb
         - file: book/math_foundations/glossary.md
 site:
   options:
