--- a/myst.yml
+++ b/myst.yml
@@ -114,6 +114,7 @@ project:
             - file: book/math_foundations/labs/probability-testing.ipynb
             - file: book/math_foundations/labs/probability-likelihood.ipynb
             - file: book/math_foundations/labs/probability-bayes.ipynb
+            - file: book/math_foundations/labs/structure-tSNE.ipynb
         - file: book/math_foundations/glossary.md
 site:
   options:
