--- a/myst.yml
+++ b/myst.yml
@@ -61,6 +61,9 @@ project:
               children:
                 - file: book/ml_principles/labs/rl_basics.ipynb
                 - file: book/ml_principles/labs/rl_hugging_face_doom.ipynb
+            - title: Oefeningen
+              children:
+                - file: book/ml_principles/labs/prep/exploratory.ipynb
         - file: book/ml_principles/glossary.md
     - title: ∑ Mathematical Foundations
       children:
